--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
-    "axios": "^0.19.0",
+    "axios": "^0.19.1",
+    "axios-retry": "^3.1.2",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
@@ -24,6 +25,7 @@
     "react-native-render-html": "https://github.com/IntelliJAbhishek/react-native-render-html#master",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-share": "^2.0.0",
+    "react-native-simple-toast": "^1.0.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-swiper-flatlist": "^2.0.3",
     "react-native-vector-icons": "^6.6.0",
