--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
+    "react-i18next": "^11.3.0",
     "react-native": "0.61.5",
     "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.5.2",
@@ -27,6 +28,7 @@
     "react-native-share": "^2.0.0",
     "react-native-simple-toast": "^1.0.0",
     "react-native-star-rating": "^1.1.0",
+    "react-native-super-grid": "^3.1.2",
     "react-native-swiper-flatlist": "^2.0.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-wc-api": "^1.1.10",
