--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-webview": "^8.0.3",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
+    "react-navigation-hooks": "^1.1.0",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
