--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@react-native-community/async-storage": "^1.7.1",
     "axios": "^0.19.1",
     "axios-retry": "^3.1.2",
+    "i18next": "^19.0.3",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-i18next": "^11.3.0",
     "react-native": "0.61.5",
+    "react-native-device-info": "^5.4.1",
     "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.5.3",
     "react-native-raw-bottom-sheet": "^2.0.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-render-html": "https://github.com/IntelliJAbhishek/react-native-render-html#master",
