--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.1",
     "axios-retry": "^3.1.2",
     "i18next": "^19.0.3",
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
