--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.9.0",
     "react-i18next": "^11.3.0",
     "react-native": "0.61.5",
+    "react-native-custom-picker": "^0.4.0",
     "react-native-device-info": "^5.4.1",
     "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.5.2",
@@ -28,7 +29,7 @@
     "react-native-modal": "^11.5.3",
     "react-native-raw-bottom-sheet": "^2.0.6",
     "react-native-reanimated": "^1.4.0",
-    "react-native-render-html": "https://github.com/IntelliJAbhishek/react-native-render-html#master",
+    "react-native-render-html": "^4.2.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-share": "^2.0.0",
     "react-native-simple-toast": "^1.0.0",
