--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/google-signin": "^3.0.4",
     "@react-native-firebase/analytics": "^6.2.0",
     "@react-native-firebase/app": "^6.2.0",
     "axios": "^0.19.1",
