--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-i18next": "^11.3.0",
+    "react-multistep": "^4.0.1",
     "react-native": "0.61.5",
     "react-native-custom-picker": "^0.4.0",
     "react-native-device-info": "^5.4.1",
