--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-custom-picker": "^0.4.0",
     "react-native-device-info": "^5.4.1",
     "react-native-fast-image": "^7.0.2",
+    "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.3",
