--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "react-native-custom-picker": "^0.4.0",
     "react-native-device-info": "^5.4.1",
     "react-native-fast-image": "^7.0.2",
-    "react-native-fit-image": "https://github.com/IntelliJAbhishek/react-native-fit-image#master",
     "react-native-fbsdk": "^1.1.2",
+    "react-native-fit-image": "https://github.com/IntelliJAbhishek/react-native-fit-image#master",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.3",
@@ -60,6 +60,8 @@
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
+    "patch-package": "^6.2.1",
+    "postinstall-postinstall": "^2.0.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
