--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "^1.5.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.3",
+    "react-native-onesignal": "^3.6.5",
     "react-native-raw-bottom-sheet": "^2.0.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-render-html": "^4.2.0",
