--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-share": "^2.0.0",
     "react-native-simple-toast": "^1.0.0",
     "react-native-star-rating": "^1.1.0",
+    "react-native-step-indicator": "^0.0.11",
     "react-native-super-grid": "^3.1.2",
     "react-native-swiper-flatlist": "^2.0.3",
     "react-native-vector-icons": "^6.6.0",
@@ -60,8 +61,6 @@
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
-    "patch-package": "^6.2.1",
-    "postinstall-postinstall": "^2.0.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
