--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-step-indicator": "^0.0.11",
     "react-native-super-grid": "^3.1.2",
+    "react-native-swipe-list-view": "^2.4.0",
     "react-native-swiper-flatlist": "^2.0.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-wc-api": "^1.1.10",
