--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-native-fbsdk": "^1.1.2",
     "react-native-fit-image": "https://github.com/IntelliJAbhishek/react-native-fit-image#master",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-inappbrowser-reborn": "^3.4.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.3",
     "react-native-onesignal": "^3.6.5",
+    "react-native-paytm": "^1.0.9",
     "react-native-raw-bottom-sheet": "^2.0.6",
     "react-native-razorpay": "^2.1.33",
     "react-native-reanimated": "^1.4.0",
