--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.0",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/google-signin": "^3.0.4",
-    "@react-native-firebase/analytics": "^6.2.0",
-    "@react-native-firebase/app": "^6.2.0",
+    "@react-native-firebase/analytics": "6.2.0",
+    "@react-native-firebase/app": "6.2.0",
     "axios": "^0.19.1",
     "axios-retry": "^3.1.2",
     "i18next": "^19.0.3",
