--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "react-native-share": "^2.0.0",
     "react-native-shimmer": "^0.6.0",
     "react-native-simple-toast": "^1.0.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-step-indicator": "^0.0.11",
     "react-native-super-grid": "^3.2.0",
     "react-native-swipe-list-view": "^2.4.0",
     "react-native-swiper-flatlist": "^2.0.3",
+    "react-native-tab-view": "^2.15.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-wc-api": "^1.1.10",
     "react-native-webview": "^8.0.3",
@@ -56,6 +58,7 @@
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-hooks": "^1.1.0",
     "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.9.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-axios-middleware": "^4.0.1",
