--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^2.2.0",
     "@react-native-community/async-storage": "^1.7.1",
-    "@react-native-community/google-signin": "^3.0.4",
+    "@react-native-community/google-signin": "^4.0.3",
     "@react-native-firebase/analytics": "6.2.0",
     "@react-native-firebase/app": "6.2.0",
     "axios": "^0.19.1",
@@ -25,6 +25,7 @@
     "react": "16.9.0",
     "react-i18next": "^11.3.0",
     "react-native": "0.61.5",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-custom-picker": "^0.4.0",
     "react-native-device-info": "^5.4.1",
     "react-native-fast-image": "^7.0.2",
@@ -36,6 +37,7 @@
     "react-native-modal": "^11.5.3",
     "react-native-onesignal": "^3.6.5",
     "react-native-paytm": "^1.0.9",
+    "react-native-payumoney": "^1.0.0",
     "react-native-raw-bottom-sheet": "^2.0.6",
     "react-native-razorpay": "^2.1.33",
     "react-native-reanimated": "^1.4.0",
@@ -44,6 +46,7 @@
     "react-native-share": "^2.0.0",
     "react-native-shimmer": "^0.6.0",
     "react-native-simple-toast": "^1.0.0",
+    "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-step-indicator": "^0.0.11",
