--- a/ios/wooapp/GoogleService-Info.plist
+++ b/ios/wooapp/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.phoeniixx.wooapp</string>
+	<string>com.in.schoolmegamart</string>
 	<key>PROJECT_ID</key>
 	<string>wooapp-1f1a6</string>
 	<key>STORAGE_BUCKET</key>
