--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/app": "6.2.0",
     "axios": "^0.19.1",
     "axios-retry": "^3.1.2",
+    "bugsnag-react-native": "2.23.3",
     "i18next": "^19.0.3",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
@@ -54,6 +55,7 @@
     "react-native-swipe-list-view": "^2.4.0",
     "react-native-swiper-flatlist": "^2.0.3",
     "react-native-tab-view": "^2.15.1",
+    "react-native-toast-message": "^1.4.2",
     "react-native-vector-icons": "^6.6.0",
     "react-native-wc-api": "^1.1.10",
     "react-native-webview": "^8.0.3",
