--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "test": "jest",
     "lint": "eslint .",
     "postinstall": "patch-package",
+    "clean": "cd android && ./gradlew clean && cd ..",
     "build": "npx jetify && cd android && ./gradlew clean && ./gradlew assembleRelease && ./gradlew bundleRelease && cd .."
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^2.2.0",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/google-signin": "^5.0.0",
-    "@react-native-firebase/analytics": "6.2.0",
-    "@react-native-firebase/app": "6.2.0",
+    "@react-native-firebase/analytics": "^10.4.1",
+    "@react-native-firebase/app": "^10.4.0",
+    "@react-native-firebase/perf": "^10.4.1",
     "axios": "^0.19.1",
     "axios-retry": "^3.1.2",
     "bugsnag-react-native": "2.23.3",
@@ -57,6 +59,7 @@
     "react-native-tab-view": "^2.15.1",
     "react-native-toast-message": "^1.4.2",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-version-check": "^3.4.2",
     "react-native-wc-api": "^1.1.10",
     "react-native-webview": "^8.0.3",
     "react-navigation": "^4.0.10",
