--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext {
         buildToolsVersion = "28.0.3"
         minSdkVersion = 20
-        compileSdkVersion = 28
+        compileSdkVersion = 29
         targetSdkVersion = 29
         supportLibVersion = "27.1.1"
         googlePlayServicesAuthVersion = "17.0.0"
@@ -12,11 +12,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
         classpath 'com.google.gms:google-services:4.3.3'
-        // classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.1, 0.99.99]'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.9, 0.99.99]'
     
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
