--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,4 +19,10 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Performance
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
     
