Fix issues till downloads

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/perf": "^10.4.1",
     "axios": "^0.19.1",
     "axios-retry": "^3.1.2",
+    "base-64": "^1.0.0",
     "bugsnag-react-native": "2.23.3",
     "i18next": "^19.0.3",
     "moment": "^2.24.0",
@@ -31,10 +32,12 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-custom-picker": "^0.4.0",
     "react-native-device-info": "^5.4.1",
+    "react-native-document-picker": "^4.2.0",
     "react-native-fast-image": "^7.0.2",
     "react-native-fbsdk": "^1.1.2",
     "react-native-fit-image": "https://github.com/IntelliJAbhishek/react-native-fit-image#master",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-inappbrowser-reborn": "^3.4.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.3",
@@ -54,6 +57,7 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-step-indicator": "^0.0.11",
     "react-native-super-grid": "^3.2.0",
+    "react-native-svg": "9.13.6",
     "react-native-swipe-list-view": "^2.4.0",
     "react-native-swiper-flatlist": "^2.0.3",
     "react-native-tab-view": "^2.15.1",
