--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,7 +18,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:3.4.2")
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.9, 0.99.99]'
-    
+        classpath "com.bugsnag:bugsnag-android-gradle-plugin:5.+"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
