--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
@@ -39,5 +40,6 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.google.com' }
     }
 }
